--- a/style.css
+++ b/style.css
@@ -1,46 +1,95 @@
 /******Header*****/
-header{
-    height: 4rem;
-    background-color: #F3F3F3;
-    /* border: 2px solid; */
+header {
+  height: 4rem;
+  background-color: #f3f3f3;
+  /* border: 2px solid; */
 }
-.title-bar{
-    display: flex;
-    height: 50%;
-    /* gap:0.5rem; */
-    align-items: center;
-    padding-left: 0.5rem;
+.title-bar {
+  display: flex;
+  height: 50%;
+  /* gap:0.5rem; */
+  align-items: center;
+  padding-left: 0.5rem;
 }
-.logo{
-    height:80%;
-    mix-blend-mode:multiply;
-    
+.logo {
+  height: 80%;
+  mix-blend-mode: multiply;
 }
-.title{
-    font-size: 1.2rem;
+.title {
+  font-size: 1.2rem;
 }
-.menu-bar{
-    display: flex;
-    gap: 10px;
-    padding-left: 1rem;
-    height: 50%;
-    
-    /* background-color: #fff; */
-    align-items: center;
+
+.menu-bar {
+  display: flex;
+  gap: 1rem;
+  margin-left: 1rem;
+  height: 50%;
+  align-items: center;
 }
 .menu{
-    /* border:3px solid; */
-}
-
-/******Main*****/
-
-main{
-    height: calc(100vh - 4rem - 4rem);
-    background-color: black;
-}
-/******Footer*****/
-footer{
-    height: 4rem;
-    background-color:#F0F0F0;
+    position: relative;
     /* border: 2px solid; */
+    padding-bottom:12px;
+}
+
+
+.menu:hover .menu-item{
+  display: block;
+
+}
+
+.menu-item{
+    background-color:#f9f7f7;
+    position:absolute;
+    top:31px;
+    z-index: 1;
+    width:6.5rem;
+    display: none;
+    cursor:pointer;
+
+}
+li{
+  padding: 0.25rem;
+}
+li:hover{
+  background-color: grey;
+}
+.menu-btn{
+  padding:2px;
+  border-radius: 4px;
+}
+.menu-btn:hover{
+  background-color: rgb(201, 197, 197);
+  cursor:pointer;
+}
+
+#videoinput{
+  display: none;
+}
+
+
+/* main content */
+main {
+  height: calc(100vh - 4rem - 4rem);
+  background-color: hsl(0, 27%, 2%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+.video{
+  height: 100%;
+  /* border: 10px solid red; */
+}
+
+
+
+
+/******Footer*****/
+footer {
+  height: 4rem;
+  background-color: #f0f0f0;
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem;
 }
