--- a/style.css
+++ b/style.css
@@ -93,3 +93,18 @@ footer {
   flex-direction: column;
   padding: 0.5rem;
 }
+
+#controls{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  gap:5px; 
+}
+
+#playbackBox{
+  font-size: 1rem;
+  width:2.3rem;
+  height: 1.3rem;
+  border:2px solid ;
+}
